--- a/index copy.html
+++ b/index copy.html
@@ -76,50 +76,108 @@
                 </div>
             </section>
 
-            <section class="mainproduct">
-                <div class="inner product">
-                    <div class="title">
-                        <h2>PRODUCT</h2>
-                        <strong>현대로보틱스 제품</strong>
-                        <p>국내 1위 로봇기업의 기술력으로 만든 서비스로봇을 소개합니다.</p>
+            <section class="maintap">
+                <h2 class="blind">객실</h2>
+                <div class=" tap">
+                    <div class="inner top">
+                        <ul class="tap_menu">
+                            <li>
+                                <a href="">SUITE</a>
+                            </li>
+                            <li>
+                                <a href="">PREMIER</a>
+                            </li>
+                            <li>
+                                <a href="">STANDARD</a>
+                            </li>
+                            <li>
+                                <a href="">CLUB SKY LOUNGE</a>
+                            </li>
+                        </ul>
                     </div>
-                    <div class="product_box">
-                        <div class="right">
-                            <ul class="product_tap on">
-                                <li><a href="">HYUNDAI D1</a></li>
-                                <li><a href="">HYUNDAI S1</a></li>
-                                <li><a href="">HYUNDAI T5</a></li>
-                                <li><a href="">HYUNDAI T6</a></li>
-                                <li><a href="">HYUNDAI T8</a></li>
-                                <li><a href="">HYUNDAI W3</a></li>
-                            </ul>
-                        </div>
-                        <div class="left">
-                            <ul class="right_box">
-                                <li class="on">
-                                    <div class="img_box">
-                                        <span>DISINFECTION ROBOT</span>
-                                        <h3>방역 로봇</h3>
-                                        <strong>HYUNDAI D1</strong>
-                                        <figure>
-                                            <img src="./images/section03_01.png" alt="">
-                                        </figure>
-                                    </div>
-                                </li>
-                                <li>
-                                    <div class="img_box">
-                                        <span>DISINFECTION ROBOT</span>
-                                        <h3>방역 로봇</h3>
-                                        <strong>HYUNDAI D1</strong>
-                                        <figure>
-                                            <img src="./images/section03_02.png" alt="">
-                                        </figure>
-                                    </div>
-                                </li>
+                    <div class="bottom">
+                        <ul class="tap_detail">
+                            <li class="on">
+                                <div class="detail_box">
+                                    <figure>
+                                        <img src="./images/section03_img01.jpg" alt="">
+                                    </figure>
+                                    <div class="inner text">
+                                        <div class="text_box">
+                                            <strong>ROOM</strong>
+                                            <h3>SUITE</h3>
+                                            <p>모던한 분위기에 특별한 공간을 제공하는</br>보다 특별함을 제공합니다.</p>
+                                            <span>최상의 숙면을 위한 고급 시몬스침대 및 오리털 침구</span>
+                                            <span>피트니스 클럽 무료 이용</span>
+                                            <span>전 객실 초고속 유/무선 인터넷 무료</span>
+                                            <a href="">자세히 보기</a>
+                                        </div>
 
-                            </ul>
-                        </div>
+                                    </div>
 
+                                </div>
+                            </li>
+                            <li>
+                                <div class="detail_box">
+                                    <figure>
+                                        <img src="./images/section03_img02.jpg" alt="">
+                                    </figure>
+                                    <div class="inner text">
+                                        <div class="text_box">
+                                            <strong>ROOM</strong>
+                                            <h3>PREMIER</h3>
+                                            <p>프리미어의 고급스런 품격이 느껴지는 모던 클래식한 감성을 선사합니다.</br>일본 AOYAMA NOMURA DESIGN의 디자인
+                                                설계
+                                                객실.</p>
+                                            <span>스카이 라운지 이용</span>
+                                            <span>최상의 숙면을 위한 고급 시몬스침대 및 오리털 침구</span>
+                                            <span>피트니스 클럽 무료이용</span>
+                                            <a href="">자세히 보기</a>
+                                        </div>
+
+                                    </div>
+                                </div>
+                            </li>
+                            <li>
+                                <div class="detail_box">
+                                    <figure>
+                                        <img src="./images/section03_img03.jpg" alt="">
+                                    </figure>
+                                    <div class="inner text">
+                                        <div class="text_box">
+                                            <strong>ROOM</strong>
+                                            <h3>STANDARD</h3>
+                                            <p>스탠다드룸은 안락한 룸 분위기와 쾌적함으로
+                                                </br>편안한 휴식 환경을 제공합니다.</p>
+                                            <span>최상의 숙면을 위한 고급 시몬스침대 및 오리털 침구</span>
+                                            <span>피트니스 클럽 무료 이용</span>
+                                            <span>전 객실 초고속유/무선 인터넷 무료</span>
+                                            <a href="">자세히 보기</a>
+
+                                        </div>
+                                    </div>
+                                </div>
+                            </li>
+                            <li>
+                                <div class="detail_box">
+                                    <figure>
+                                        <img src="./images/section01_img01.jpg" alt="">
+                                    </figure>
+                                    <div class="inner text">
+                                        <div class="text_box">
+                                            <strong>ROOM</strong>
+                                            <h3>CLUB SKY LOUNGE</h3>
+                                            <p>21층 최고층에 위치하여 명동 시내와 남산,
+                                                </br>명동 성당이 멋지게 펼쳐진 전망이 한 눈에 들어오며 편안하고 아늑한 분위기를 자랑 합니다.</p>
+                                            <span>프리미어 객실 이용 고객 혜택</span>
+                                            <span>방문객 이용</span>
+                                            <span>유료서비스</span>
+                                            <a href="">자세히 보기</a>
+                                        </div>
+                                    </div>
+                                </div>
+                            </li>
+                        </ul>
                     </div>
                 </div>
             </section>
@@ -214,41 +272,6 @@
         </main>
 
         <footer class="footer">
-            <div class="inner footer_wrap">
-                <div class="footer_logo">
-                    <img src="./images/footer.png" alt="">
-                </div>
-                <div class="top">
-                    <ul>
-                        <li><a href="">회사소개</a></li>
-                        <li><a href="">연혁</a></li>
-                        <li><a href="">창업자 말씀</a></li>
-                        <li><a href="">HD현대 가치체계</a></li>
-                        <li><a href="">인재채용</a></li>
-                    </ul>
-                </div>
-                <div class="middle">
-                    <ul>
-                        <li>(43022) 대구 달성군 유가읍 테크노순환로3길 50 현대로보틱스</li>
-                        <li>사업자등록번호 261-86-01821</li>
-                        <li>
-                            <span>서빙&방역로봇 A/S대표번호 1533-3330</span>
-                            <span><a href="">서빙&방역로봇 문의 031-289-5380</a></span>
-                            <span><a href="">E-mail servicerb@hyundai-robotics.com</a></span>
-                        </li>
-                    </ul>
-                </div>
-                <div class="bottom">
-                    <ul>
-                        <li><a href="">개인정보처리방침</a></li>
-                        <li><a href="">이메일무단수집거부</a></li>
-                        <li><a href="">영상정보처리기기운영관리방침</a></li>
-                    </ul>
-                </div>
-                <div class="copy">
-                    <span>Copyright © HYUNDAI ROBOTICS. All rights reserved.</span>
-                </div>
-            </div>
 
         </footer>
     </div>
