--- a/index.html
+++ b/index.html
@@ -28,7 +28,17 @@
                 </h1>
                 <nav class="gnb">
                     <ul>
-                        <li><a href="">제품소개</a></li>
+                        <li>
+                            <a href="">제품소개</a>
+                            <ul class="sub">
+                                <li>
+                                    방역로봇
+                                </li>
+                                <li>
+                                    서빙로봇
+                                </li>
+                            </ul>
+                        </li>
                         <li><a href="">로봇활용사례</a></li>
                         <li><a href="">상담/시연신청</a></li>
                         <li><a href="">고객지원</a></li>
@@ -95,22 +105,28 @@
                             </ul>
                         </div>
                         <div class="left">
-                            <ul class="right_box">
+                            <ul class="left_box">
                                 <li class="on">
-                                    <div class="img_box">
+                                    <div class="txt">
                                         <span>DISINFECTION ROBOT</span>
                                         <h3>방역 로봇</h3>
                                         <strong>HYUNDAI D1</strong>
+                                    </div>
+                                    <div class="img_box">
                                         <figure>
                                             <img src="./images/section03_01.png" alt="">
                                         </figure>
                                     </div>
+
                                 </li>
                                 <li>
-                                    <div class="img_box">
+                                    <div class="txt">
                                         <span>DISINFECTION ROBOT</span>
-                                        <h3>방역 로봇</h3>
+                                        <h3>asd</h3>
                                         <strong>HYUNDAI D1</strong>
+                                    </div>
+                                    <div class="img_box">
+
                                         <figure>
                                             <img src="./images/section03_02.png" alt="">
                                         </figure>
