--- a/index copy.html
+++ b/index copy.html
@@ -9,272 +9,109 @@
     <link rel="stylesheet" href="./css/common.css">
     <link rel="stylesheet" href="./css/slick.css">
     <link rel="stylesheet" href="./css/jquery.mb.YTPlayer.min.css">
-    <link rel="stylesheet" href="./css/main.css">
+    <link rel="stylesheet" href="./css/main copy.css">
 
     <script src="./js/jquery-1.12.4.min.js"></script>
     <script src="./js/jquery.mb.YTPlayer.min.js"></script>
     <script src="./js/slick.min.js"></script>
-    <script src="./js/main.js"></script>
+    <script src="./js/main copy.js"></script>
 </head>
 
 <body>
-    <div class="wrap">
-        <header class="header">
-            <div class="inner header_wrap">
-                <h1>
-                    <a href="" class="logo">
+    <section class="mainproduct">
+        <div class="inner product">
+            <div class="title">
+                <h2>PRODUCT</h2>
+                <strong>현대로보틱스 제품</strong>
+                <p>국내 1위 로봇기업의 기술력으로 만든 서비스로봇을 소개합니다.</p>
+            </div>
+            <div class="product_box">
+                <div class="left">
+                    <div class="txt_box on">
+                        <div class="txt">
+                            <span>DISINFECTION ROBOT</span>
+                            <h3>방역 로봇</h3>
+                            <strong>HYUNDAI D1</strong>
+                        </div>
+                        <ul>
+                            <li>
+                                <strong>외형치수</strong>
+                                <span>58 x 58 x 129 cm</span>
+                            </li>
+                            <li>
+                                <strong>무게</strong>
+                                <span>74kg</span>
+                            </li>
+                            <li>
+                                <strong>충전방식</strong>
+                                <span>Auto, Manual</span>
+                            </li>
+                            <li>
+                                <strong>주행방식</strong>
+                                <span>SLAM</span>
+                            </li>
+                        </ul>
+                    </div>
 
-                    </a>
-                </h1>
-                <nav class="gnb">
-                    <ul>
-                        <li><a href="">제품소개</a></li>
-                        <li><a href="">로봇활용사례</a></li>
-                        <li><a href="">상담/시연신청</a></li>
-                        <li><a href="">고객지원</a></li>
-                        <li><a href="">사업제안</a></li>
-                    </ul>
-                </nav>
-                <div class="rgh">
-                    <ul>
-                        <li><a href="">ENG</a></li>
-                        <li><a href="">KOR</a></li>
+                    <div class="txt_box">
+                        <div class="txt">
+                            <span>DISINFECTION ROBOT</span>
+                            <h3>방역 로봇</h3>
+                            <strong>HYUNDAI D1</strong>
+                        </div>
+                        <ul>
+                            <li>
+                                <strong>외형치수</strong>
+                                <span>58 x 5afsdf8 x 129 cm</span>
+                            </li>
+                            <li>
+                                <strong>무게</strong>
+                                <span>74kgdasfaf</span>
+                            </li>
+                            <li>
+                                <strong>충전방식</strong>
+                                <span>Auto, asdasfManual</span>
+                            </li>
+                            <li>
+                                <strong>sdf주행방식</strong>
+                                <span>SLAafsdfM</span>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+
+                <div class="middle">
+                    <div class="img_box on">
+                        <figure>
+                            <img src="./images/section03_01.png" alt="">
+                        </figure>
+                    </div>
+
+                    <div class="img_box ">
+                        <figure>
+                            <img src="./images/section03_02.png" alt="">
+                        </figure>
+                    </div>
+
+                    <div class="img_box ">
+                        <figure>
+                            <img src="./images/section03_02.png" alt="">
+                        </figure>
+                    </div>
+                </div>
+
+                <div class="right">
+                    <ul class="product_tap on">
+                        <li><a href="">HYUNDAI D1</a></li>
+                        <li><a href="">HYUNDAI S1</a></li>
+                        <li><a href="">HYUNDAI T5</a></li>
+                        <li><a href="">HYUNDAI T6</a></li>
+                        <li><a href="">HYUNDAI T8</a></li>
                     </ul>
                 </div>
             </div>
-        </header>
-        <main>
-            <section class="mainvisual">
-                <div class="inner maintitle">
-                    <h2>RELIABLE</h2>
-                    <p>현대 서비스로봇 </p>
-                    <a href="">상담/시연신청</a>
-                </div>
-
-                <div class="mainslide">
-                    <div class="itm itm01"></div>
-                    <div class="itm itm02"></div>
-                    <div class="itm itm03"></div>
-                </div>
-            </section>
-            <section class="maincontent">
-                <div class="inner content">
-                    <div class="title">
-                        <h2>MANIFESTO</h2>
-                        <strong>현대라서 만족하고 현대이기에 약속합니다</strong>
-                    </div>
-                    <div class="content_box">
-                        <figure>
-                            <img src="./images/section02.jpg" alt="">
-                        </figure>
-                    </div>
-                    <div class="txt">
-                        <p>만약, 산업현장의 자동화 설비를 이끌어온 기술이 우리의 삶에 적용된다면 얼마나 경제적이고 안전할까요?</br>
-                            만약, 산업현장을 제어하는 AI 기술이 생활 속 로봇에 적용된다면 얼마나 효율적이고 똑똑해 질까요?</br>
-                            24시간 사람을 돕고 위험한 일도 마다하지 않으며 사람 손이 닿지 않는 곳까지 빈틈없이 케어하는 현대 서비스로봇이 우리의 삶과 함께합니다.</p>
-                    </div>
-                </div>
-            </section>
-
-            <section class="maintap">
-                <h2 class="blind">객실</h2>
-                <div class=" tap">
-                    <div class="inner top">
-                        <ul class="tap_menu">
-                            <li>
-                                <a href="">SUITE</a>
-                            </li>
-                            <li>
-                                <a href="">PREMIER</a>
-                            </li>
-                            <li>
-                                <a href="">STANDARD</a>
-                            </li>
-                            <li>
-                                <a href="">CLUB SKY LOUNGE</a>
-                            </li>
-                        </ul>
-                    </div>
-                    <div class="bottom">
-                        <ul class="tap_detail">
-                            <li class="on">
-                                <div class="detail_box">
-                                    <figure>
-                                        <img src="./images/section03_img01.jpg" alt="">
-                                    </figure>
-                                    <div class="inner text">
-                                        <div class="text_box">
-                                            <strong>ROOM</strong>
-                                            <h3>SUITE</h3>
-                                            <p>모던한 분위기에 특별한 공간을 제공하는</br>보다 특별함을 제공합니다.</p>
-                                            <span>최상의 숙면을 위한 고급 시몬스침대 및 오리털 침구</span>
-                                            <span>피트니스 클럽 무료 이용</span>
-                                            <span>전 객실 초고속 유/무선 인터넷 무료</span>
-                                            <a href="">자세히 보기</a>
-                                        </div>
-
-                                    </div>
-
-                                </div>
-                            </li>
-                            <li>
-                                <div class="detail_box">
-                                    <figure>
-                                        <img src="./images/section03_img02.jpg" alt="">
-                                    </figure>
-                                    <div class="inner text">
-                                        <div class="text_box">
-                                            <strong>ROOM</strong>
-                                            <h3>PREMIER</h3>
-                                            <p>프리미어의 고급스런 품격이 느껴지는 모던 클래식한 감성을 선사합니다.</br>일본 AOYAMA NOMURA DESIGN의 디자인
-                                                설계
-                                                객실.</p>
-                                            <span>스카이 라운지 이용</span>
-                                            <span>최상의 숙면을 위한 고급 시몬스침대 및 오리털 침구</span>
-                                            <span>피트니스 클럽 무료이용</span>
-                                            <a href="">자세히 보기</a>
-                                        </div>
-
-                                    </div>
-                                </div>
-                            </li>
-                            <li>
-                                <div class="detail_box">
-                                    <figure>
-                                        <img src="./images/section03_img03.jpg" alt="">
-                                    </figure>
-                                    <div class="inner text">
-                                        <div class="text_box">
-                                            <strong>ROOM</strong>
-                                            <h3>STANDARD</h3>
-                                            <p>스탠다드룸은 안락한 룸 분위기와 쾌적함으로
-                                                </br>편안한 휴식 환경을 제공합니다.</p>
-                                            <span>최상의 숙면을 위한 고급 시몬스침대 및 오리털 침구</span>
-                                            <span>피트니스 클럽 무료 이용</span>
-                                            <span>전 객실 초고속유/무선 인터넷 무료</span>
-                                            <a href="">자세히 보기</a>
-
-                                        </div>
-                                    </div>
-                                </div>
-                            </li>
-                            <li>
-                                <div class="detail_box">
-                                    <figure>
-                                        <img src="./images/section01_img01.jpg" alt="">
-                                    </figure>
-                                    <div class="inner text">
-                                        <div class="text_box">
-                                            <strong>ROOM</strong>
-                                            <h3>CLUB SKY LOUNGE</h3>
-                                            <p>21층 최고층에 위치하여 명동 시내와 남산,
-                                                </br>명동 성당이 멋지게 펼쳐진 전망이 한 눈에 들어오며 편안하고 아늑한 분위기를 자랑 합니다.</p>
-                                            <span>프리미어 객실 이용 고객 혜택</span>
-                                            <span>방문객 이용</span>
-                                            <span>유료서비스</span>
-                                            <a href="">자세히 보기</a>
-                                        </div>
-                                    </div>
-                                </div>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-            </section>
-
-
-
-
-
-
-
-
-
-
-
-            <section class="maincases">
-                <div class="inner title">
-                    <h2>CASES</h2>
-                    <strong>현대로보틱스 제품 활용 사례</strong>
-                    <p>현대로보틱스의 제품은 기업, 의료, 숙박, 음식점 등 여러 곳에서 쓰이고 있습니다.</p>
-                </div>
-                <div class="cases">
-                    <div class="img_box">
-                        <figure>
-                            <a href="">
-                                <img src="./images/section04_01.png" alt="">
-                            </a>
-                        </figure>
-                        <div class="txt">
-                            <span>CULTURE</span>
-                            <h3>문화활용사례</h3>
-                            <a href="">자세히 보기 <i class="xi-angle-right"></i></a>
-                        </div>
-                    </div>
-                    <div class="img_box">
-                        <figure>
-                            <a href="">
-                                <img src="./images/section04_02.png" alt="">
-                            </a>
-                        </figure>
-                        <div class="txt">
-                            <span>MEDICAL</span>
-                            <h3>의료활용사례</h3>
-                            <a href="">자세히 보기 <i class="xi-angle-right"></i></a>
-                        </div>
-                    </div>
-
-                    <div class="img_box">
-                        <figure>
-                            <a href="">
-                                <img src="./images/section04_03.png" alt="">
-                            </a>
-                        </figure>
-                        <div class="txt">
-                            <span>HOTEL</span>
-                            <h3>호텔활용사례</h3>
-                            <a href="">자세히 보기 <i class="xi-angle-right"></i></a>
-                        </div>
-                    </div>
-
-                    <div class="img_box">
-                        <figure>
-                            <a href="">
-                                <img src="./images/section04_04.png" alt="">
-                            </a>
-
-                        </figure>
-                        <div class="txt">
-                            <span>ACCOMMODATION</span>
-                            <h3>숙박활용사례</h3>
-                            <a href="">자세히 보기 <i class="xi-angle-right"></i></a>
-                        </div>
-                    </div>
-
-                    <div class="img_box">
-                        <figure>
-                            <a href="">
-                                <img src="./images/section04_05.png" alt="">
-                            </a>
-                        </figure>
-                        <div class="txt">
-                            <span>RESTAURANT</span>
-                            <h3>음식점활용사례</h3>
-                            <a href="">자세히 보기 <i class="xi-angle-right"></i></a>
-
-                        </div>
-
-                    </div>
-
-                </div>
-            </section>
-
-        </main>
-
-        <footer class="footer">
-
-        </footer>
-    </div>
+        </div>
+    </section>
 
 </body>
 
