--- a/index.html
+++ b/index.html
@@ -30,12 +30,74 @@
                     <ul>
                         <li>
                             <a href="">제품소개</a>
+                            <ul class="sub">
+                                <li>방역로봇
+                                    <ul class="sub_box">
+                                        <li><a href="">HYUNDAI D1</a></li>
+                                    </ul>
+
+                                </li>
+                                <li>서빙로봇
+                                    <ul class="sub_box">
+                                        <li><a href="">HYUNDAI S1</a></li>
+                                        <li><a href="">HYUNDAI T5</a></li>
+                                        <li><a href="">HYUNDAI T6</a></li>
+                                        <li><a href="">HYUNDAI T8</a></li>
+                                    </ul>
+                                </li>
+                            </ul>
 
                         </li>
-                        <li><a href="">로봇활용사례</a></li>
-                        <li><a href="">상담/시연신청</a></li>
-                        <li><a href="">고객지원</a></li>
-                        <li><a href="">사업제안</a></li>
+                        <li><a href="">로봇활용사례</a>
+                            <ul class="sub">
+                                <li>방역로봇
+                                    <ul class="sub_box">
+                                        <li><a href="">기업</a></li>
+                                        <li><a href="">숙박</a></li>
+                                        <li><a href="">의료</a></li>
+                                        <li><a href="">문화</a></li>
+                                    </ul>
+
+                                </li>
+                                <li>서빙로봇
+                                    <ul class="sub_box">
+                                        <li><a href="">음식점</a></li>
+
+                                    </ul>
+
+                                </li>
+                                <li>호텔로봇
+                                    <ul class="sub_box">
+                                        <li><a href="">호텔</a></li>
+
+                                    </ul>
+
+                                </li>
+                            </ul>
+
+                        </li>
+                        <li><a href="">상담/시연신청</a>
+
+                        </li>
+                        <li><a href="">고객지원</a>
+                            <ul class="sub">
+                                <ul class="sub_box">
+                                    <li><a href="">AS신청</a></li>
+                                    <li><a href="">FAQ</a></li>
+                                    <li><a href="">새소식</a></li>
+
+                                </ul>
+                            </ul>
+                        </li>
+                        <li><a href="">사업제안</a>
+                            <ul class="sub">
+                                <ul class="sub_box">
+                                    <li><a href="">제휴문의</a></li>
+                                    <li><a href="">대리점 모집문의</a></li>
+
+                                </ul>
+                            </ul>
+                        </li>
                     </ul>
                 </nav>
                 <div class="rgh">
@@ -43,6 +105,11 @@
                         <li><a href="">ENG</a></li>
                         <li><a href="">KOR</a></li>
                     </ul>
+                </div>
+                <div class="mobile_btn">
+                    <button>
+                        <span class="blind">모바일메뉴</span>
+                    </button>
                 </div>
             </div>
         </header>
@@ -395,6 +462,49 @@
                 </div>
             </section>
 
+            <!-- <section class="mainnews">
+                <div class="inner">
+                    <div class="title">
+                        <h2>NEWS</h2>
+                        <strong>현대로보틱스 새소식</strong>
+                        <p>현대로보틱스는 사회발전에 공헌하는 사랑받는 기업을 만들어갈 것입니다.</p>
+                    </div>
+                    <div class="news_tap">
+                        <div class="news_menu on">
+                            <div class="menu_box">
+                                <span>2023.05.03</span>
+                                <strong>올인원 24&amp;36 요즘제 출시</strong>
+                            </div>
+                            <div class="menu_box">
+                                <span>2023.05.03</span>
+                                <strong>올인원 24&amp;36 요즘제 출시</strong>
+                            </div>
+                            <div class="menu_box">
+                                <span>2023.05.03</span>
+                                <strong>올인원 24&amp;36 요즘제 출시</strong>
+                            </div>
+                        </div>
+                        <div class="news">
+                            <div class="img_box on">
+                                <figure>
+                                    <img src="./images/section05_01.jpg" alt="">
+                                </figure>
+                            </div>
+                            <div class="img_box">
+                                <figure>
+                                    <img src="./images/section05_02.png" alt="">
+                                </figure>
+                            </div>
+                            <div class="img_box">
+                                <figure>
+                                    <img src="./images/section05_03.jpg" alt="">
+                                </figure>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section> -->
+
         </main>
 
         <footer class="footer">
@@ -424,13 +534,30 @@
                 </div>
                 <div class="bottom">
                     <ul>
-                        <li><a href="">개인정보처리방침</a></li>
+                        <li><a href=""><strong>개인정보처리방침</strong></a></li>
                         <li><a href="">이메일무단수집거부</a></li>
                         <li><a href="">영상정보처리기기운영관리방침</a></li>
                     </ul>
                 </div>
                 <div class="copy">
-                    <span>Copyright © HYUNDAI ROBOTICS. All rights reserved.</span>
+                    <div class="copyright">
+                        <span>Copyright © HYUNDAI ROBOTICS. All rights reserved.</span>
+                    </div>
+                    <div class="icon">
+                        <figure>
+                            <a href=""> <img src="./images/img_footer_youtube_01.png" alt=""></a>
+
+                        </figure>
+                        <figure>
+                            <a href=""><img src="./images/img_footer_in_01.png" alt=""></a>
+
+                        </figure>
+                        <figure>
+                            <a href=""><img src="./images/img_footer_instagram_01.png" alt=""></a>
+
+                        </figure>
+                    </div>
+
                 </div>
             </div>
 
